--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <h1>Multiplication Practice Auguste & Thib</h1>
-        <label for="num-questions">Nombre de question</label>
+        <label for="num-questions">Nombre de mutliplication à résoudre ?</label>
         <input type="number" id="num-questions" min="1" max="100" value="5" />
         <button onclick="generateQuestions()">Generate</button>
 
