--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
                 z-index: 999;
             }
         </style>
+
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+        
     </head>
     <body>
         <h1>Multiplication Practice Auguste & Thib</h1>
